--- a/src/views/DetailsPage/MoviePage.module.css
+++ b/src/views/DetailsPage/MoviePage.module.css
@@ -1,10 +1,10 @@
 .btn {
-  width: 95px;
+  width: 100%;
   height: 20px;
   display: flex;
   align-items: center;
   font-size: 14px;
-  margin: 10px 0;
+  margin: 10px 0 10px 20px;
   border: none;
   background-color: transparent;
 }
@@ -19,6 +19,7 @@
 }
 .mainInfo {
   display: flex;
+  margin-left: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid black;
 }
@@ -34,7 +35,7 @@
   border-bottom: 1px solid black;
 }
 .addInfo_title {
-  margin: 0 0 15px 0;
+  margin: 0 0 15px 20px;
 }
 .addList {
   margin: 0;
